<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="ui_warning_long">Warning</string>
    <string name="settings_30_seconds">30 Seconds</string>
    <string name="settings_60_seconds">60 Seconds</string>
    <string name="settings_120_seconds">120 Seconds</string>
    <string name="settings_about">About</string>
    <string name="settings_abs_active">Antilock Brake System Active:</string>
    <string name="settings_adaptive_cruise_go_notifier_big">Adaptive Cruise Go Notifier</string>
    <string name="settings_adaptive_cruise_go_notifier_short">Adaptive Cruise Go Notifier</string>
    <string name="settings_adaptive_forward_lighting_big">Advanced Forward Lighting</string>
    <string name="settings_adaptive_forward_lighting_short">Advanced Forward Lighting</string>
    <string name="settings_air_quality_sensor">Air Quality Sensor</string>
    <string name="settings_alert_big">Alert</string>
    <string name="settings_alert_small">Alert</string>
    <string name="settings_alert_brake">Alert and Brake</string>
    <string name="settings_alert_brake_steer">Alert, Brake, and Steer</string>
    <string name="settings_alert_type">Alert Type</string>
    <string name="ui_audio">Audio</string>
    <string name="ui_audio_long1">Audio</string>
    <string name="ui_off">Off</string>
    <string name="ui_low">Low</string>
    <string name="ui_medium">Medium</string>
    <string name="ui_medium_small">Medium</string>
    <string name="ui_high">High</string>
    <string name="ui_on">On</string>
    <string name="ui_pm">PM</string>
    <string name="ui_switch_user">Switch User</string>
    <string name="ui_on_big">On</string>
    <string name="ui_erase">Erase</string>
    <string name="ui_reset">Reset</string>
    <string name="ui_kb">KB</string>
    <string name="ui_mb">MB</string>
    <string name="ui_gb_big">GB</string>
    <string name="ui_off_big">Off</string>
    <string name="settings_apple_carplay">Apple CarPlay</string>
    <string name="settings_android_auto">Android Auto</string>
    <string name="settings_mirrorlink">MirrorLink</string>
    <string name="settings_engine_sound_management_short">Engine Sound Management</string>
    <string name="settings_audio_cues_menu_option_off">Startup Sounds Option Off</string>
    <string name="settings_audio_cues_shutdown_menu_option_off">Startup &#47; Shutdown Sounds Option Off</string>
    <string name="settings_audio_cues_menu_option_off_content">The Startup Sounds are currently set to Off.\nTurn Startup Sounds On to adjust the volume setting for these sounds.</string>
    <string name="settings_audio_cues_shutdown_menu_option_off_content">The Startup &#47; Shutdown Sounds are currently set to Off.\nTurn Startup &#47; Shutdown Sounds On to adjust the volume setting for these sounds.</string>
    <string name="settings_disabled">Disabled</string>
    <string name="settings_rear_mimic_front">Mimic Front</string>
    <string name="settings_rear_last_known">Last Known</string>
    <string name="settings_confidence_threshold">Confirm More / Less</string>
    <string name="settings_confirm_more">Confirm More</string>
    <string name="settings_confirm_less_big">Confirm Less</string>
    <string name="settings_confirm_less_small">Confirm Less</string>
    <string name="settings_climate_air_quality">Climate and Air Quality</string>
    <string name="settings_climate_app">Climate</string>
    <string name="settings_collision">Collision</string>
    <string name="settings_collision_detection_systems">Collision / Detection Systems</string>
    <string name="settings_comfort_convenience">Comfort and Convenience</string>
    <string name="settings_lighting">Lighting</string>
    <string name="settings_lighting_long">Lighting</string>
    <string name="settings_left_hand_traffic">Left Hand Traffic</string>
    <string name="settings_power_door_locks">Power Door Locks</string>
    <string name="settings_remote_lock_unlock_start_short">Remote Lock, Unlock, and Start</string>
    <string name="settings_driving_mode_big">Driving Mode</string>
    <string name="settings_sport_mode_customization">Sport Mode Customization</string>
    <string name="settings_drive_mode_customization">Drive Mode Customization</string>
    <string name="settings_auto_mode_customization">Auto Mode Customization</string>
    <string name="settings_teen_driver">Teen Driver</string>
    <string name="audiocue_startup_shutdown_sounds_option_off">The Startup %/Shutdown % Sounds are currently set to Off.Turn Startup%/Shutdown % Sounds On to adjust the volume setting for these sounds.</string>
    <string name="settings_valet_mode">Valet Mode</string>
    <string name="settings_vehicle_locator_lights_big">Vehicle Locator Lights</string>
    <string name="settings_vehicle_locator_lights_short">Vehicle Locator Lights</string>
    <string name="settings_exit_lighting">Exit Lighting</string>
    <string name="settings_auto_high_beam">Auto High Beam</string>
    <string name="settings_adaptive_high_beam">Adaptive High Beam</string>
    <string name="settings_smart_high_beam_assist_short">Automatic High Beam Assist</string>
    <string name="settings_auto_high_beam_small">IntelliBeam</string>
    <string name="settings_intelligent_light_distribution_small">Adaptive Forward Lighting</string>
    <string name="settings_return_to_factory_settings">Return to Factory Settings</string>
    <string name="settings_view_report_card">View Report Card</string>
    <string name="settings_report_card">Report Card</string>
    <string name="settings_change_pin">Change PIN</string>
    <string name="settings_key_registration">Setup Keys</string>
    <string name="settings_audio_volume_limit">Audio Volume Limit</string>
    <string name="settings_set_audio_volume_limit">Set Audio Volume Limit</string>
    <string name="settings_chime_volume">Chime Volume</string>
    <string name="settings_teen_driver_speed_limiter">Teen Driver Speed Limiter</string>
    <string name="settings_set_teen_driver_speed_warning">Set Teen Driver Speed Warning</string>
    <string name="settings_language_small">Language</string>
    <string name="settings_sounds_big">Sounds</string>
    <string name="settings_sounds_small">Sounds</string>
    <string name="settings_maximum_startup_volume">Maximum Startup Volume</string>
    <string name="settings_audible_touch_feedback_short">Audible Touch Feedback</string>
    <string name="settings_audio_feedback_speed">Audio Feedback Speed</string>
    <string name="settings_slow">Slow</string>
    <string name="settings_fast">Fast</string>
    <string name="settings_mode">Mode</string>
    <string name="settings_proximity_sensing">Proximity Sensing</string>
    <string name="settings_auto_small">Auto</string>
    <string name="settings_auto_big">Auto</string>
    <string name="settings_calibrate_touchscreen">Calibrate Touchscreen</string>
    <string name="settings_turn_display_off">Turn Display Off</string>
    <string name="settings_warning_content1">You are about to reset all vehicle settings for the current user.</string>
    <string name="settings_interactive_prompts">Friendly Prompts</string>
    <string name="settings_setting_unavailable_content">The vehicle must be turned on to access this setting.</string>
    <string name="settings_setting_unavailable">Setting Unavailable</string>
    <string name="settings_incorrect_code">Incorrect Code</string>
    <string name="settings_voice_recognition_feedback_unavailable_content">The selected language does not support Voice Recognition and Audio Feedback. Choose a different language to enable Voice Recognition and Audio Feedback.</string>
    <string name="settings_voice_recognition_unavailable_content">The selected language does not support Voice Recognition. Choose a different language to enable Voice Recognition.</string>
    <string name="settings_voice_recognition_unavailable">Voice Recognition Unavailable</string>
    <string name="settings_voice_recognition_feedback_unavailable">Voice Recognition / Feedback Unavailable</string>
    <string name="settings_touchscreen_calibration_successful_content">Your new calibration has been saved.</string>
    <string name="settings_touchscreen_calibration_successful">Touchscreen Calibration Successful</string>
    <string name="settings_touchscreen_calibration_failed_big">Touchscreen Calibration Failed</string>
    <string name="settings_touchscreen_calibration_failed_content">Your touchscreen calibration has not been saved. You must press the dot on the screen to complete the touchscreen calibration.</string>
    <string name="settings_warning_content">You are about to erase app data settings, user profiles, and personal data in the vehicle including Navigation and Phone data.</string>
    <string name="settings_warning_content2">You are about to reset all of your radio system and application preference settings for the current user.</string>
    <string name="settings_lock_codes_do_not_match">Lock Codes Do Not Match</string>
    <string name="settings_lock_codes_do_not_match_content">The lock codes that you entered do not match. Press Retry and re-enter lock code to place your system into Valet Mode.</string>
    <string name="settings_four_digit_lock_code_required">Four Digit Lock Code Required</string>
    <string name="settings_four_digit_lock_code_required_content">The lock code must be 4 digits. Press Retry and enter the digits you set when placing the system into Valet Mode.</string>
    <string name="settings_valet_mode_unlock">Valet Mode – Enter Code to Unlock</string>
    <string name="settings_set_teen_driver_enter_a_4_digit_pin">Teen Driver – Set 4 Digit PIN</string>
    <string name="settings_incorrect_code_content">The code you have entered is incorrect. Enter the digits you set when placing the system into Valet Mode.</string>
    <string name="settings_re_enter_pin_then_press_set">Teen Driver – Confirm PIN</string>
    <string name="settings_teen_driver_information">Teen Driver Information</string>
    <string name="settings_teen_driver_information_content">Teen Driver Mode allows you to assign keys with customizable restrictions. Refer to your Owner\'s Manual for details.</string>
    <string name="settings_four_digit_pin_required">Four Digit PIN Required</string>
    <string name="settings_four_digit_pin_required_content">The PIN must be 4 digits.</string>
    <string name="settings_teen_driver_mode_set_content">Teen Driver PIN successfully set.</string>
    <string name="settings_pin_does_not_match">PIN Does Not Match</string>
    <string name="settings_pin_does_not_match_content">The PIN that you entered does not match.</string>
    <string name="settings_teen_driver_mode_not_set_content">You may retry entering the PIN to set Teen Driver Mode.</string>
    <string name="settings_auto">Auto</string>
    <string name="settings_display_mode_day">Day</string>
    <string name="settings_display_mode_night">Night</string>
    <string name="settings_mode_content">This setting adjusts the appearance of the navigation map view and any downloaded apps optimized for day or night time conditions. Set to Auto for the display to automatically adjust based on bright/dark conditions.</string>
    <string name="build_number">Build Number</string>
    <string name="updater_update_history">Update History</string>
    <string name="submit">Submit</string>
    <string name="select_theme">Please Select Theme</string>
    <string name="RTL">RTL</string>
    <string name="LHD">LHD</string>
    <string name="RHD">RHD</string>
    <string name="layout_direction">Select Layout Direction</string>
    <string name="skew">Skew</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="theme_cadillac">Cadillac UI</string>
    <string name="theme_non_cadillac">Non-Cadillac UI</string>
    <string name="build_number_static">full_gminfo35/userdebug/6.0.1/MIH20A-394/4737/test-keys</string>
</resources>