<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data class="Settingsdisplaymodebinding">

        <import type="android.view.View" />

        <variable
            name="obj"
            type="String" />

        <variable
            name="clickHandler"
            type="com.gm.settingsapp.viewmodels.EventHandler" />

        <variable
            name="dataPoolHandler"
            type="com.gm.settingsservice.models.DataPoolDataHandler" />

        <variable
            name="position"
            type="Integer" />

        <import type="com.gm.settingsservice.models.eSettingsdisplayMode" />

    </data>

    <com.gm.settingsapp.ui.customview.SkewConstraintLayout
        style="?attr/settings_layout_bg_style"
        app:layout_constraintStart_toStartOf="parent"
        bind:layoutDirection="@{dataPoolHandler.settingsConfiguration}"
        bind:skewValue="@{dataPoolHandler.isSkewEnabled()}"
        bind:slopedAngle="@{-dataPoolHandler.SKEW_MAIN_ANGLE_8}">

        <com.gm.settingsapp.ui.customview.SkewConstraintLayout
            android:id="@+id/settings_on_off"
            style="?attr/settings_skewlayout_bg">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_top_bar"
                style="?attr/settings_cardview_style"
                app:cardElevation="8dp">

                <include
                    style="?attr/settings_match_wrap_style"
                    layout="@layout/uil_ta_hc_topbar_layout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    bind:clickHandler="@{clickHandler}"
                    bind:dataPoolHandler="@{dataPoolHandler}" />
            </androidx.cardview.widget.CardView>

            <RadioGroup
                android:id="@+id/radioGroup2"
                style="?attr/settings_radiogroup"
                app:layout_constraintEnd_toStartOf="@+id/scrollView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardview_top_bar">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/radio_btn_auto"
                    style="?attr/settings_radiobutton_auto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:checked="@{dataPoolHandler.SETTINGS_DISPLAYMODETYPE==eSettingsdisplayMode.SETTINGS_DISPLAY_MODE_AUTO}"
                    android:drawableStart="@drawable/img_ta_radiobutton_themeb"
                    android:drawablePadding="@dimen/onoffbutton_padding_end"
                    android:fontFamily="@font/gmsansui_medium"
                    android:onClick="@{(view) -> clickHandler.onClickHandler(view,eSettingsdisplayMode.SETTINGS_DISPLAY_MODE_AUTO)}"
                    android:padding="@dimen/onoffbutton_padding"
                    android:tag="eModeType"
                    android:text="@string/settings_auto"
                    android:textAlignment="viewStart"
                    android:textSize="@dimen/radio_btn_text_size"
                    app:layout_constraintStart_toStartOf="@+id/radioGroup2" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/radio_btn_day"
                    style="?attr/settings_radiobutton_day"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:checked="@{dataPoolHandler.SETTINGS_DISPLAYMODETYPE==eSettingsdisplayMode.SETTINGS_DISPLAY_MODE_DAY}"
                    android:drawableStart="@drawable/img_ta_radiobutton_themeb"
                    android:drawablePadding="@dimen/onoffbutton_padding_end"
                    android:fontFamily="@font/gmsansui_medium"
                    android:onClick="@{(view) -> clickHandler.onClickHandler(view,eSettingsdisplayMode.SETTINGS_DISPLAY_MODE_DAY)}"
                    android:padding="@dimen/onoffbutton_padding"
                    android:tag="eModeType"
                    android:text="@string/settings_display_mode_day"
                    android:textAlignment="viewStart"
                    android:textSize="@dimen/radio_btn_text_size"
                    app:layout_constraintStart_toStartOf="@+id/radioGroup"
                    app:layout_constraintTop_toBottomOf="@+id/radioButtonSlow" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/radio_btn_night"
                    style="?attr/settings_radiobutton_night"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:checked="@{dataPoolHandler.SETTINGS_DISPLAYMODETYPE==eSettingsdisplayMode.SETTINGS_DISPLAY_MODE_NIGHT}"
                    android:drawableStart="@drawable/img_ta_radiobutton_themeb"
                    android:drawablePadding="@dimen/onoffbutton_padding_end"
                    android:fontFamily="@font/gmsansui_medium"
                    android:onClick="@{(view) -> clickHandler.onClickHandler(view,eSettingsdisplayMode.SETTINGS_DISPLAY_MODE_NIGHT)}"
                    android:padding="@dimen/onoffbutton_padding"
                    android:tag="eModeType"
                    android:text="@string/settings_display_mode_night"
                    android:textAlignment="viewStart"
                    android:textSize="@dimen/radio_btn_text_size"
                    app:layout_constraintStart_toStartOf="@+id/radioGroup"
                    app:layout_constraintTop_toBottomOf="@+id/radio_btn_day" />
            </RadioGroup>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.6" />

            <ScrollView
                android:id="@+id/scrollView"
                style="@style/Layout_Match_Wrap"
                android:layout_width="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline_vertical"
                app:layout_constraintTop_toBottomOf="@id/cardview_top_bar">

                <com.gm.settingsapp.ui.customview.SkewTextView
                    android:id="@+id/ui_settings_information_audio_text"
                    style="?attr/text_material_content_text"
                    android:fontFamily="@font/gmsansui_regular"
                    android:padding="@dimen/skewtext_padding"
                    android:text="@string/settings_mode_content"
                    android:textSize="@dimen/List_Secondary_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/scrollView" />
            </ScrollView>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.6" />

            <ImageView
                android:id="@+id/img_settings_display"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/img_sensor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.6"
                app:layout_constraintStart_toEndOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/scrollView"
                app:layout_constraintWidth_percent="0.25" />
        </com.gm.settingsapp.ui.customview.SkewConstraintLayout>
    </com.gm.settingsapp.ui.customview.SkewConstraintLayout>

</layout>
